# pmdk-examples

./: .gitmodules  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  check_config.sh  common.mk  configure  configure.ac  pcj.makefile.patch  simple_examples
cpp_queue/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  persistent_queue.cpp  persistent_queue.hpp  volatile_queue.cpp  volatile_queue.hpp
employees/: Employee.java  EmployeeList.java  Makefile  README.md  config.properties
find_all/: Makefile  create_test_tree.sh  find-all  find-all-pm  find-all-pm.cpp  find-all.cpp
hello_world/: Makefile
hello_world/libpmem/: Makefile  README.md  hello_libpmem  hello_libpmem.c
hello_world/libpmemblk/: Makefile  README.md  hello_libpmemblk  (+1 more)
lib/: Makefile  llpl.makefile.patch  pcj.makefile.patch
mapreduce/: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  helpers.cpp  helpers.hpp  list_entry.cpp  list_entry.hpp  main.cpp  persistent_string.cpp  persistent_string.hpp  pm_mapreduce.cpp  pm_mapreduce.hpp  task_list.cpp  task_list.hpp  wordcount
p_pool/: Makefile  README.md  pPool  pPool.cpp  pPool.hpp
pmem-mariadb/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  configure.cmake  import_executables.cmake  info_macros.cmake  install_manifest.txt  make_dist.cmake
pmem_leak/: Makefile  README.md  checker  checker.cpp  common.hpp  fixer  fixer.cpp  leaker  leaker.cpp  normal  normal.cpp
simple_grep/: Makefile  Makefile.am  Makefile.in  README.md  common.mk  configure  configure.ac
(+475 files in other folders)
